Fixes on navbar
- fixed links not showing in hamburger
- fixed styling for hamburger
- fixed hover over links changing size
- changed href to links because internal site
- still have issues with hamburger styling stretching

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -43,8 +43,26 @@ a:hover {
 }
 
 /* ul  */
+.navLink {
+  /* display: flex; */
+  font-family: Arial, Helvetica, sans-serif;
+  /* justify-content: space-between; */
+  /* align-items: center; */
+  /* gap: 60px; */
+  color: black;
+}
+.navLink:hover {
+  /* display: flex; */
+  font-family: Arial, Helvetica, sans-serif;
+  /* justify-content: space-between; */
+  /* align-items: center; */
+  /* gap: 60px; */
+  color: rgb(212, 95, 28);
+}
+
 .navMenu {
   display: flex;
+  font-family: Arial, Helvetica, sans-serif;
   justify-content: space-between;
   align-items: center;
   gap: 60px;
@@ -53,6 +71,7 @@ a:hover {
 
 .navMenu:hover {
   display: flex;
+  font-family: Arial, Helvetica, sans-serif;
   justify-content: space-between;
   align-items: center;
   gap: 60px;
